--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Simon</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 
 <body>
   <h1 id="level-title">Press a Key to Start</h1>
-  <div class="container">
-    <div class="rules">
-      <div class="rules-title">
-        Rules
-      </div>
-      <ol>
-        <li>Press anykey to Start.</li>
-        <li>A random pad will flash. Using mouse to choose that pad, we call it's <span style="color: greenyellow;">The first pad</span>.</li>
-        <li>Another random pad continue flashing, we call it's <span style="color: darksalmon;">The second pad</span>. </li>
-          <ul class="ul">
-            <li>Click <span style="color: greenyellow;">The first pad</span>.</li> 
-            <li>THEN click <span style="color: darksalmon;">The second pad</span>.</li>
-          </ul>   </li>
-        <li>Continue follow the sequence of the game correctly. </li>
-        <li>Try it out, which level you can reach!</li>
-      </ol>
+  <div class="rules">
+    <div class="rules-title">
+      Rules
     </div>
+    <ol>
+      <li>Press anykey to Start.</li>
+      <li>A random pad will flash. Using mouse to choose that pad, we call it's <span style="color: greenyellow;">The first pad</span>.</li>
+      <li>Another random pad continue flashing, we call it's <span style="color: darksalmon;">The second pad</span>. </li>
+        <ul class="ul">
+          <li>Click <span style="color: greenyellow;">The first pad</span>.</li> 
+          <li>THEN click <span style="color: darksalmon;">The second pad</span>.</li>
+        </ul>   </li>
+      <li>Continue follow the sequence of the game correctly. </li>
+      <li>Try it out, which level you can reach!</li>
+    </ol>
+  </div>
+  <div class="container">
     <div lass="row">
 
       <div type="button" id="green" class="btn green">
